--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
              <a href="#" class="logo"><img src="images/logo.png" /></a>
 			 <div class="navi-middle">
                 <ul class="menu-top">
-                    <li><a href="#">INICIO</a></li>
+                    <li><a href="Trang - chiaseluan/Trang chiaseluantest.html">INICIO</a></li>
                     <li><a href="#">USADOS</a></li>
                     <li><a href="#">NUEVOS</a></li>
                     <li><a href="#">PRECIOS</a></li>
